<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".iTubeMainActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:id="@+id/tvURLInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:gravity="bottom"
        android:text="@string/youtube_url_label"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webView"/>

    <EditText
        android:id="@+id/etURLInput"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/youtube_url"
        android:autofillHints="url"
        android:inputType="textUri"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/secondary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvURLInputLabel" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/itube_button"
        android:text="@string/play"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etURLInput" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/itube_button"
        android:text="@string/add_to_playlist"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btnPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/itube_button"
        android:text="@string/my_playlist"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>